# AndroidWork

./: .gitignore  build.gradle  gradle.properties  settings.gradle  test
app/: AndroidManifest.xml  build.gradle  build.gradle~  maindex-keep.pro  my.keystore
app/assets/: Rect.rar  mmyso  serve.html
app/assets/template/: template.xml
app/res/anim/: scale_big.xml  voiceinput_speaking_anim.xml
app/res/drawable/: image_error.xml  image_loading.xml
app/res/drawable-xxhdpi/: voiceinput_recognizing.xml
app/res/layout/: activity_book_list.xml  activity_book_twopane.xml  activity_gif.xml  activity_glide.xml  activity_js.xml  activity_launch_flash.xml  activity_launch_flash1.xml  activity_launch_flash2.xml  activity_main.xml  motion_layout.xml  recycler.xml  serve.xml  voice.xml
app/res/raw/: wildlife.3gp
app/res/values/: array.xml  attrs.xml  colors.xml  strings.xml
app/res/xml/: accessibility.xml
app/src/android/support/rastermill/: FrameSequence.java  FrameSequenceDrawable.java
app/src/com/aop/: AspectBean.java  DebugLog.java  DebugTrace.java  FieldAspect.java  FieldTrace.java  StopWatch.java  TraceAspect.java
app/src/com/database/: AppConstants.java  CipherUtils.java  DBActivity.java  DBManager.java  DatabaseHelper.java  Person.java  SomeFileObserver.java
app/src/com/dw/: AndroidNClassLoader.java  AppInstallReceiver.java  DragLinearLayout.java  DyHelper.java  DynamicApplication.java  GestureView.java  InstallDex.java  LayoutBean.java  MainActivity.java  MoveView.java  MyImageView.java  MySurfaceView.java  MyView.java  PhoneReceiver.java  QuickAccessibilityService.java  ReflectUtil.java
app/src/com/dw/block/: BlockDetectByChoreographer.java  BlockDetectByPrinter.java  LogMonitor.java
app/src/com/dw/capture/: ScreenCaptureActivity.java  ScreenCaptureHelper.java
app/src/com/dw/crash/: NativeInterface.java
app/src/com/dw/filemap/: FileMapUtils.java
app/src/com/dw/fragments/: BookDetailActivity.java  BookDetailFragment.java  BookListActivity.java  BookListFragment.java  MyFragment.java
app/src/com/dw/gif/: BaseGifDecoder.java  BaseGifImageView.java  GifAction.java  GifActivity.java  GifCommonUtil.java  GifFrame.java  GifFrameData.java  GifHeaderData.java  GifImage.java  GifTimerPool.java  MultiGifImageView.java
app/src/com/dw/glide/: DataCacheKey.java  GlideActivity.java  ImageAdapter.java  ImageLoader.java  OnLoadResListener.java
app/src/com/dw/http/: Test.java
app/src/com/dw/js/: AndroidJavaScript.java  JSActivity.java  serve.java
app/src/com/dw/media/: FlashActivity.java  FlashActivity1.java  FlashActivity2.java
app/src/com/dw/memcheck/: MemCheck.java
app/src/com/dw/recycler/: RecyclerList.java
app/src/com/dw/resizeicon/: ResizeUtils.java
app/src/com/dw/touchable/: MotionActivity.java  MyScrollView.java
app/src/com/dw/utils/: FileOperator.java  Helper.java  PingBackUtils.java  RedoWorker.java  StreamUtil.java
app/src/com/dw/voice/: VoiceContainerActivity.java  VoiceView.java
app/src/com/dw/webp/: BitmapUtil.java  BlurTransformation.java  ByteBufferBitmapWebpDecoder.java  ByteBufferFsDecoder.java  FrameSequence.java  FrameSequenceDrawable.java  FrameSequenceEncoder.java  FrameSequenceResource.java  FsDrawableDecoder.java  FsDrawableEncoder.java  FsDrawableResource.java  FsDrawableTranscoder.java  FsGlideLibraryModule.java  Gifflen.java  GlideConfiguration.java  ImageHeaderParser.java  NinePatchBitmap.java  NinePatchBitmapDecoder.java  NinePatchBitmapResource.java  StreamBitmapWebpDecoder.java  StreamFsDecoder.java  TransformUrl.java  TransformUrlFetcher.java  TransformUrlLoader.java  WebpDownsampler.java  WebpHeaderParser.java  WebpModule.java
buildSrc/: build.gradle  build.gradle~
crash_collect/: Android.mk  Application.mk  CMakeLists.txt  Makefile  cmake_install.cmake  config.sh  dynsym.map  environment.h  exception_handler.cpp  exception_handler.h  native_crash_jni.cpp
crash_collect/anr/: event_queue.cpp  event_queue.h
crash_collect/crash/: crash_handler.cpp
crash_collect/crash/stacktrace/: stacktrace.cpp
crash_collect/crash/stacktrace/arm/: backtrace.cpp  backtrace.h  exidxstep.cpp  exidxstep.h
crash_collect/crash/stacktrace/arm64/: backtrace.cpp  backtrace.h  eh_frame.cpp  eh_frame.h  ehstep.cpp  ehstep.h
crash_collect/utils/: leb128.cpp  leb128.h  report_writer.h  sys_bits.h  utf.cpp  utf.h
gradle/wrapper/: gradle-wrapper.properties
hack/: build.gradle  proguard-rules.pro
hack/src/main/: AndroidManifest.xml
jni/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  android_gradle_build.json  cmake_install.cmake  cmake_toolchain.sh  config.sh  main_jni.cpp  main_jni.c~  run.sh
libcrash_collect/: Android.mk  Application.mk  CMakeLists.txt  config.sh  environment.h  exception_handler.cpp  exception_handler.h  makeNdk.sh  native_crash_jni.cpp
libcrash_collect/anr/: inotify_utils.cpp
libcrash_collect/crash/: crash_handler.cpp  crash_handler.h
libcrash_collect/crash/stacktrace/: elf.h  stacktrace.cpp  stacktrace.h
libcrash_collect/crash/stacktrace/arm/: backtrace.cpp  backtrace.h  exidxstep.cpp
libcrash_collect/crash/stacktrace/arm64/: eh_frame.h  pointer.h
libcrash_collect/utils/: clog.h  memcheck.cpp  memcheck.h  report_writer.cpp  ucontext.h
libframesequence/: Android.mk  Application.mk  BitmapDecoderJNI.cpp  FrameSequence.h  FrameSequenceJNI.cpp  FrameSequence_webp.h  Gifflen.cpp  Gifflen.h  makeNdk.sh
libframesequence/giflib/: Android.mk
libframesequence/libwebp/: Android.mk
libframesequence/libwebp/src/generate/: dib.cpp  neuquant.cpp  neuquant.h
libmemcheck/: Android.mk  CMakeLists.txt  backtrace.cpp  backtrace.h  memcheck_jni.cpp  run.sh
libmemcheck/common/: log.h  sys_bits.h  ucontext.h  utf.cpp  utf.h
libmemcheck/elfHook/: elfhook.cpp  elfio.cpp  elfio.h  elfutils.cpp
libmemcheck/inlineHook/: inlineHook.c  inlineHook.h  relocate.c
libmemcheck/stacktrace/: exidxstep.cpp  exidxstep.h  stacktrace.cpp  stacktrace.h
native_crash_collector/: AndroidManifest.xml  build.gradle  proguard-rules.pro
realm/: build.gradle
realm/src/main/: AndroidManifest.xml
(+51 files in other folders)
